# manifolds_approx

./: pyproject.toml  signal_generator.ipynb  signal_sync.ipynb  signal_viewer.ipynb  vector_fields.ipynb  vector_fields_lorenz.ipynb
dataset_creator/model/dataset/: dataset.py  lorenz_system.py  vector_fields.py
dataset_creator/model/schemes/: diode.py  schemes.py
dataset_creator/model/signals/: frequencies_props.py  interval.py  noise.py  signal_synchronization.py  signals.py
dataset_creator/utils/: metrics.py
examples/: signal_depends2d.py  signal_depends3d.py  signal_sync.py
tests/data/signals/: log2.npy  log2_scheme1_x1.npy  log2_scheme2_x1.npy  log2_scheme2_x2.npy
tests/data/sync/: u.csv  x1.csv  x2.csv
