[tool.poetry]
name = "dataset-creator"
version = "0.1.0"
description = ""
authors = ["Krupinin.OS <partnertner@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
